[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/fonts/biggerfontoutline.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/supportscenes/Menu.gd" type="Script" id=2]
[ext_resource path="res://ui/fonts/smallerfont.tres" type="DynamicFont" id=6]
[ext_resource path="res://ui/MenuOption.tscn" type="PackedScene" id=8]

[node name="Menu" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1459.0
margin_bottom = 913.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_right = 1459.0
margin_bottom = 339.0
custom_fonts/font = ExtResource( 1 )
text = "SPACEDOGS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StockButton" parent="." instance=ExtResource( 8 )]
position = Vector2( 447.57, 448 )

[node name="TimeButton" parent="." instance=ExtResource( 8 )]
position = Vector2( 447.57, 512 )

[node name="SoccerButton" parent="." instance=ExtResource( 8 )]
position = Vector2( 448, 576 )

[node name="TrainingButton" parent="." instance=ExtResource( 8 )]
position = Vector2( 447.57, 640 )

[node name="OnlineButton" parent="." instance=ExtResource( 8 )]
position = Vector2( 448, 704 )

[node name="Info" type="RichTextLabel" parent="."]
margin_left = 17.1767
margin_top = 12.366
margin_right = 363.177
margin_bottom = 304.366
custom_fonts/normal_font = ExtResource( 6 )
text = "ARROW KEYS TO MOVE
Z, X TO ATTACK
C TO SHIELD

P TO PAUSE
R TO RESET
H TO SHOW HITBOXES

P + Z + C TO QUIT"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}
